--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://x.com/Sichao_He?t=viVa7yzw3FHKr4o5TN5vgg&s=09"
+  twitter          : "https://x.com/Sichao_He"
   vine             :
   weibo            :
   xing             :
